added controllers and views folders

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <h1>HOME PAGE</h1>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <a href="/auth/google">LOG IN</a>
+    <a href="/recipes">RECIPES</a>
+
   </body>
 </html>
