--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <h1>HOME PAGE</h1>
+    <h1> </h1>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
+  
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <a href="/auth/google">LOG IN</a>
-    <a href="/recipes">RECIPES</a>
 
+    <a href="/">HOME</a>
+    <a href="/recipes">RECIPES</a>
+    <a href="/auth/google">LOG IN</a>
+    <a href="/auth/google">CREATE ACCOUNT</a> 
+
+    <h1><%= title %></h1>
+    <p>Welcome to <%= title %></p> 
+    
   </body>
 </html>
