--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -1,4 +1,5 @@
- 
+<%- include('../partials/header') %>
+
     <form id="new-form" action="/recipes" method="POST">
         <label>Name:</label>
         <input type="text" name="name">
@@ -11,4 +12,5 @@
         <input type="submit" value="Add Recipe">
     </form>
 
+<%- include('../partials/footer') %>
  
