--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -1,21 +1,41 @@
-<table>
-    <thead>
-        <tr>
-            <th>User</th>
-            <th>Date</th>
-            <th>Comment</th>
-        </tr>
-    </thead>
-</table>
+<%- include('../partials/header') %> 
 
-<!-- <td class="comment-user"><img alt="avatar" src="<%= r.userAvatar %>"><%= r.userName %></td> -->
+<section id="show-page">
+  <div>Name: </div>
+  <div>
+    <%= recipe.name %>
+  </div>
+  <div>imgURL: </div>
+  <div>
+    <%= recipe.imgURL %>
+  </div>
+  <div>directions: </div>
+  <div>
+    <%= recipe.directions %>
+  </div>
+  <div>Categories: </div>
+  <div>
+    <%= recipe.categories %>
+  </div> 
+  <div>Ingredients: </div>
+  <div>
+    <%= recipe.ingredients %>
+  </div> 
+</section>
 
- <!-- <td><%= r.rating %></td>
-          <!-- Add this td -->
-          <td>
-            <% if (user && user._id.equals(r.user)) { %>
-              <form action="/reviews/<%= r._id %>?_method=DELETE" method="POST">
-                <button type="submit">X</button>
-              </form>
-            <% } %>
-          </td> -->
+    <h2>Comments</h2>
+  <form id="add-comment-form" method="POST" action="/recipes/<%= recipe._id %>/comments">
+    <label>Comment:</label>
+    <textarea name="content"></textarea>
+    <label>Rating:</label>
+    <select name="rating">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+    </select>
+    <input type="submit" value="Add Comment">
+  </form>
+<%- include('../partials/footer') %>
+  
