--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,13 +8,39 @@
   
   <body>
 
-    <a href="/">HOME</a>
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/">HOME</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/recipes">RECIPES</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/auth/google">LOG IN</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/auth/google">CREATE ACCOUNT</a>
+      </li>
+    </ul>
+
+    <!-- <a href="/">HOME</a>
     <a href="/recipes">RECIPES</a>
     <a href="/auth/google">LOG IN</a>
-    <a href="/auth/google">CREATE ACCOUNT</a> 
+    <a href="/auth/google">CREATE ACCOUNT</a>  -->
 
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p> 
+    <p>Welcome to <%= title %>. This is dedicated to my "Anne" - the turkish word for mom. I created this website so my sisters and I can have easy access to Anne's amazing Uzbek recipes.</p> 
     
+    <div class="container">
+      <div class="recipe card"> [IMG] </div>
+      <p> [] [] [] </p>
+      <p> [] [] [] </p>
+      <p> [] [] [] </p>
+    </div>
+
+    <div>
+      <p>include different category links that once clicked, it will bring to a new page of recipes (more specifically, images of the recipes that classify under the chosen category).</p>
+    </div>
+
   </body>
 </html>
