working on add comments bug

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,13 +29,17 @@
     <a href="/auth/google">CREATE ACCOUNT</a>  -->
 
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %>. This is dedicated to my "Anne" - the turkish word for mom. I created this website so my sisters and I can have easy access to Anne's amazing Uzbek recipes.</p> 
+    <p>Welcome to <%= title %>. This is dedicated to my "Anne" - the turkish word for mother. I created this website so my sisters and I can have easy access to our mother's amazing Uzbek recipes.  It is also available for anyone who would loves Anne's cooking as much as we do or wants to try making an uzbek dish for themselves!</p> 
     
     <div class="container">
-      <div class="recipe card"> [IMG] </div>
-      <p> [] [] [] </p>
-      <p> [] [] [] </p>
-      <p> [] [] [] </p>
+      <div class="recipe card"> 
+        [IMG] 
+        [IMG] 
+        [IMG] 
+        [IMG] 
+        [IMG] 
+        [IMG] 
+      </div>
     </div>
 
     <div>
