--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -1,9 +1,8 @@
 <!<%- include('../partials/header') %>
 
-<body>
-    <h1>RECIPES</h1>
-    <table>
-        <thead>
+    <h1>ANNE'S RECIPES</h1>
+    <!-- <table> -->
+        <!-- <thead>
             <tr>
                 <th>Name</th>
                 <th>Image</th>
@@ -11,23 +10,22 @@
                 <th>Ingredients</th>     
             </tr>
         </thead>
-        <tbody>
+        <tbody> -->
             <% recipes.forEach(function(r) { %> 
-            <tr>
+                <a href="/recipes/<%= r.id %>"><img src="r.image"></a>
+            <!-- <tr>
                 <td><%= r.name %></td> 
                 <td><%= r.image %></td> 
                 <td><%= r.directions %></td> 
                 <td><%= r.categories %></td> 
                 <td><%= r.ingredients %></td> 
-                <td><a href="/recipes/<%= r.id %>">View this Recipe</td> 
-
-            </tr>
+                <td><a href="/recipes/<%= r.id %>">View this Recipe</td>   
+            </tr> -->
             <% }) %>     
-        </tbody> 
-    </table>
-</body>
-</html>
+        <!-- </body> 
+    </table> -->
 
-<a href="/recipes/new">NEW</a>
+
+<a href="/recipes/new">ADD NEW</a>
 
 <%- include('../partials/footer') %>
