--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -1,16 +1,36 @@
 <%- include('../partials/header') %>
 
-    <form id="new-form" action="/recipes" method="POST">
-        <label>Name:</label>
-        <input type="text" name="name">
-        <label>Image:</label>
-        <input type="text" name="image">
-        <label>Ingredients:</label>
-        <input type="text" name="ingredients">
-        <label>Directions:</label>
-        <input type="text" name="directions">
-        <input type="submit" value="Add Recipe">
-    </form>
+    <h3 class="text-center">Add Recipe</h3>
+    <br>
+    <form action="/recipes" method="POST">
+        <div class="row mb-3">
+          <label for="inputRecipeName" class="col-sm-2 col-form-label">Name</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputRecipeName">
+          </div>
+        </div>
+        <div class="row mb-3">
+          <label for="inputRecipeIMG" class="col-sm-2 col-form-label">Image</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputRecipeIMG">
+          </div>
+        </div>
+        <div class="row mb-3">
+            <label for="inputRecipeIngredients" class="col-sm-2 col-form-label">Ingredients</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="inputRecipeIngredients">
+            </div>
+          </div>
+        <div class="row mb-3">
+            <label for="inputRecipeDirections" class="col-sm-2 col-form-label">Directions</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="inputRecipeDirections">
+            </div>
+        </div>
+        <div class="d-grid justify-content-center">
+            <button type="submit" class="btn btn-primary">Add Recipe</button>
+        </div>
+      </form>
 
 <%- include('../partials/footer') %>
  
