--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,41 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+html {
+  /* height: 100%;
+  width: 100%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.justify-content-end {
-  
+body {
+  height: 100%;
+  width: 100%;
+}
+
+a {
+  color: #052836;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1000px;
+  height: 850px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  margin: 16px;
+  width: 300px;
+  height: 250px;
 }
