--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -1,7 +1,37 @@
 <!<%- include('../partials/header') %>
 
-<form action="/recipes/<%= recipe._id %>?_method=PUT">
+<!-- <form action="/recipes/<%= recipe._id %>?_method=PUT">
     <input type="content" name="recipe" value="<%= recipe.recipe %>">
-    <button type="submit">Save Recipe</button></form>
+    <button type="submit">Save Recipe</button></form> -->
+
+<form action="/recipes/<%= recipe._id %>?_method=PUT">
+        <div class="row mb-3">
+          <label for="inputRecipeName" class="col-sm-2 col-form-label">Name</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputRecipeName" value="<%= recipe.inputRecipeName %>">
+          </div>
+        </div>
+        <div class="row mb-3">
+          <label for="inputRecipeIMG" class="col-sm-2 col-form-label">Image</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputRecipeIMG" value="<%= recipe.inputRecipeIMG %>">
+          </div>
+        </div>
+        <div class="row mb-3">
+            <label for="inputRecipeIngredients" class="col-sm-2 col-form-label">Ingredients</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="inputRecipeIngredients" value="<%= recipe.inputRecipeIngredients %>">
+            </div>
+          </div>
+        <div class="row mb-3">
+            <label for="inputRecipeDirections" class="col-sm-2 col-form-label">Directions</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="inputRecipeDirections" value="<%= recipe.inputRecipeDirections %>">
+            </div>
+        </div>
+        <div class="d-grid justify-content-center">
+            <button type="submit" class="btn btn-primary">Save Recipe</button>
+        </div>
+</form>
 
 <%- include('../partials/footer') %>
