--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -1,32 +1,28 @@
 <!<%- include('../partials/header') %>
 
-<!-- <form action="/recipes/<%= recipe._id %>?_method=PUT">
-    <input type="content" name="recipe" value="<%= recipe.recipe %>">
-    <button type="submit">Save Recipe</button></form> -->
-
 <form action="/recipes/<%= recipe._id %>?_method=PUT">
         <div class="row mb-3">
           <label for="inputRecipeName" class="col-sm-2 col-form-label">Name</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputRecipeName" value="<%= recipe.inputRecipeName %>">
+            <input type="text" name="name" class="form-control" id="inputRecipeName" value="<%= recipe.name %>">
           </div>
         </div>
         <div class="row mb-3">
           <label for="inputRecipeIMG" class="col-sm-2 col-form-label">Image</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputRecipeIMG" value="<%= recipe.inputRecipeIMG %>">
+            <input type="text" name="image" class="form-control" id="inputRecipeIMG" value="<%= recipe.image %>">
           </div>
         </div>
         <div class="row mb-3">
             <label for="inputRecipeIngredients" class="col-sm-2 col-form-label">Ingredients</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputRecipeIngredients" value="<%= recipe.inputRecipeIngredients %>">
+              <input type="text" name="ingredients" class="form-control" id="inputRecipeIngredients" value="<%= recipe.ingredients %>">
             </div>
           </div>
         <div class="row mb-3">
             <label for="inputRecipeDirections" class="col-sm-2 col-form-label">Directions</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputRecipeDirections" value="<%= recipe.inputRecipeDirections %>">
+              <input type="text" name="directions" class="form-control" id="inputRecipeDirections" value="<%= recipe.directions %>">
             </div>
         </div>
         <div class="d-grid justify-content-center">
