--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -6,25 +6,25 @@
         <div class="row mb-3">
           <label for="inputRecipeName" class="col-sm-2 col-form-label">Name</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputRecipeName">
+            <input type="text" name="name" class="form-control" id="inputRecipeName">
           </div>
         </div>
         <div class="row mb-3">
           <label for="inputRecipeIMG" class="col-sm-2 col-form-label">Image</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputRecipeIMG">
+            <input type="text" name="image" class="form-control" id="inputRecipeIMG">
           </div>
         </div>
         <div class="row mb-3">
             <label for="inputRecipeIngredients" class="col-sm-2 col-form-label">Ingredients</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputRecipeIngredients">
+              <input type="text" name="ingredients" class="form-control" id="inputRecipeIngredients">
             </div>
           </div>
         <div class="row mb-3">
             <label for="inputRecipeDirections" class="col-sm-2 col-form-label">Directions</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="inputRecipeDirections">
+              <input type="text" name="directions" class="form-control" id="inputRecipeDirections">
             </div>
         </div>
         <div class="d-grid justify-content-center">
