--- a/views/recipes/edit.ejs
+++ b/views/recipes/edit.ejs
@@ -1,4 +1,4 @@
-<!<%- include('../partials/header') %>
+<%- include('../partials/header') %>
 
 <form action="/recipes/<%= recipe._id %>?_method=PUT">
         <div class="row mb-3">
