--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,14 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <title><%= title %></title>
 </head>
 
 <body>
-    <nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Anne's Cookbook</a> 
+            <div class="navbar-brand">Anne's Cookbook</div> 
         <ul class="nav justify-content-end">
         <% if (user) { %>
             <li class="nav-item">
@@ -25,6 +26,7 @@
               </li>
             <li class="nav-item">
                 <a class="nav-link" href="/recipes/new" <%- title === 'Add Recipes' ? 'class="active"' : '' %>>ADD RECIPES</a>
+                <!-- do i need the title class code above -->
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/logout">LOG OUT</a>
