--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -1,10 +1,10 @@
 <%- include('../partials/header') %>
 
-<h1>ANNE'S RECIPES</h1>
+<h1>THE RECIPES</h1>
     <div class = "card-container">
         <% recipes.forEach(function(r) { %> 
             <div class="card">
-                <a href="/recipes/<%= r.id %>"><img src="<%= r.image%>"></a>
+                <a href="/recipes/<%= r.id %>"><img src="<%= r.imgURL%>"></a>
             </div>
         <% }) %>     
     </div>
