--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -12,7 +12,7 @@
         <div class="row mb-3">
           <label for="inputRecipeIMG" class="col-sm-2 col-form-label">Image</label>
           <div class="col-sm-10">
-            <input type="text" name="image" class="form-control" id="inputRecipeIMG">
+            <input type="text" name="imgURL" class="form-control" id="inputRecipeIMG">
           </div>
         </div>
         <div class="row mb-3">
@@ -25,6 +25,12 @@
             <label for="inputRecipeDirections" class="col-sm-2 col-form-label">Directions</label>
             <div class="col-sm-10">
               <input type="text" name="directions" class="form-control" id="inputRecipeDirections">
+            </div>
+        </div>
+        <div class="row mb-3">
+            <label for="inputRecipeCategories" class="col-sm-2 col-form-label">Categories</label>
+            <div class="col-sm-10">
+              <input type="text" name="categories" class="form-control" id="inputRecipeCategories">
             </div>
         </div>
         <div class="d-grid justify-content-center">
