--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,6 +25,11 @@ a {
   color: #052836;
 }
 
+.about-paragraph {
+  text-align: center;
+  margin: 50px;
+}
+
 .card-container {
   display: flex;
   flex-wrap: wrap;
@@ -38,4 +43,18 @@ a {
   margin: 16px;
   width: 300px;
   height: 250px;
+}
+
+.one-recipe-container {
+  text-align: center
+}
+
+.comments-container {
+  color: brown
+}
+
+.bottom-btns {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
