--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -1,125 +1,120 @@
 <%- include('../partials/header') %> 
 
-<section id="show-page">
+<section id="show-one-recipe-page">
+  <div class="one-recipe-container">
+    <div class="one-recipe-card">
+      <img src="<%= recipe.imgURL%>">
+      <h1><%= recipe.name %></h1>
+      <h3>Ingredients:</h3>
+      <p><%= recipe.ingredients %></p>
+      <h3>Directions:</h3>
+      <p><%= recipe.directions %></p>
+      <h3>Categories:</h3>
+      <p><%= recipe.categories %></p> 
+    </div>
+  </div>
 
-  <div><img src="<%= recipe.imgURL%>"></div>
-  <div>Name:</div>
-  <div><%= recipe.name %></div>
-  <div>Ingredients:</div>
-  <div><%= recipe.ingredients %></div>
-  <div>Directions:</div>
-  <div><%= recipe.directions %></div>
-  <div>Categories:</div>
-  <div><%= recipe.categories %></div> 
+  <div class="comments-container">
+    <h6>Comments</h6>
+    <% recipe.comments.forEach(function(c) { %>
+      <% if (recipe.comments.length) { %>  
+        <table>
+          <thead>
+            <tr>
+              <th>User</th>
+              <th>Date</th>
+              <th>Comment</th>
+              <th>Rating</th>  
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% let total=0 %>
+              <% total +=c.rating %>
+                <tr> 
+                  <td class="comment-user"><img alt="avatar" src="<%= c.userAvatar %>"><%= c.userName %></td>
+                  <td><%= c.createdAt.toLocaleDateString() %></td>
+                  <td><%= c.text %></td>
+                  <td><%= c.rating %></td>
+                </tr>
+            </tbody>
+          </table>
+      <% } else { %>
+        <h5>No Comments Yet</h5>
+      <% } %>
+      <% if (user) { %>
 
-  <br><br>
+        <div>
+          <form id="edit-comment-form" action="/recipes/comments/<%= c._id %>?_method=PUT" method="POST">
+            <input type="content" name="text" value="<%= c.text %>">
+            <label>Rating:</label>
+            <select name="rating">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+            <button id="button">Save Comment</button>
+          </form>
+          
+          <button id="show-button">Edit Comment</button>
+          <script>
+            const $form = $('#edit-comment-form');
+            const $button = $('#show-button');
+            
+            $form.hide();
+            $button.click(function() {
+              $form.show();
+              $button.hide();
+            })
+          </script>
 
-  <h5>Comments</h5>
-  <% recipe.comments.forEach(function(c) { %>
-    <% if (recipe.comments.length) { %>  
-      <table>
-        <thead>
-          <tr>
-            <th>User</th>
-            <th>Date</th>
-            <th>Comment</th>
-            <th>Rating</th>  
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% let total=0 %>
-            <% total +=c.rating %>
-              <tr> 
-                <td class="comment-user"><img alt="avatar" src="<%= c.userAvatar %>"><%= c.userName %></td>
-                <td><%= c.createdAt.toLocaleDateString() %></td>
-                <td><%= c.text %></td>
-                <td><%= c.rating %></td>
-              </tr>
-          </tbody>
-        </table>
-    <% } else { %>
-      <h5>No Comments Yet</h5>
-    <% } %>
+          <form action="/comments/<%= c._id %>?_method=DELETE" method="POST">
+            <button type="submit">X</button>
+          </form> 
+        </div>
+      <% } %>
+    <% }); %>
+  
+
     <% if (user) { %>
-      <td>
-        <form id="edit-comment-form" action="/recipes/comments/<%= c._id %>?_method=PUT" method="POST">
-          <input type="content" name="text" value="<%= c.text %>">
-          <label>Rating:</label>
-          <select name="rating">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-          </select>
-          <button id="button">Save Comment</button>
-        </form>
-        
-        <button id="show-button">Edit Your Comment</button>
-        <script>
-          const $form = $('#edit-comment-form');
-          $form.hide();
-        
-          const $button = $('#show-button');
-        
-          $button.click(function() {
-            $form.show();
-            $button.hide();
-          })
-        </script>
-      </td>
+      <form id="add-comment-form" method="POST" action="/recipes/<%= recipe._id %>/comments">
+        <textarea name="text" placeholder="type comment here"></textarea>
+        <label>Rating:</label>
+        <select name="rating">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+      <button id="button">Submit</button>
+    </form>
 
-      <td> 
-        <form action="/comments/<%= c._id %>?_method=DELETE" method="POST">
-          <button type="submit">X</button>
-        </form> 
-      </td>
+    <button id="show-second-button">ADD COMMENT</button>
+    <script>
+      const $secondform = $('#add-comment-form');
+      const $secondbutton = $('#show-second-button');
+
+      $secondform.hide();
+      $secondbutton.click(function() {
+        $secondform.show();
+        $secondbutton.hide();
+      })
+    </script>
+    </div>
     <% } %>
-  <% }); %>
+
 
   <% if (user) { %>
-  <td>
-    <form id="add-comment-form" method="POST" action="/recipes/<%= recipe._id %>/comments">
-      <textarea name="text" placeholder="type comment here"></textarea>
-      <label>Rating:</label>
-      <select name="rating">
-        <option value="1">1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-      </select>
-    <button id="button">Add Comment</button>
-  </form>
-
-  <button id="show-second-button">Add Comment</button>
-  <script>
-    const $secondform = $('#add-comment-form');
-    $secondform.hide();
-  
-    const $secondbutton = $('#show-second-button');
-  
-    $secondbutton.click(function() {
-      $secondform.show();
-      $secondbutton.hide();
-    })
-  </script>
-
-  </td>
-  <% } %>
-
-  <br><br>
-  <br><br>
-
-  <% if (user) { %>
-    <div>
+    <div class="bottom-btns">
+      <button><a href="/recipes/<%= recipe.id %>/edit">EDIT RECIPE</a></button>
       <form action="/recipes/<%= recipe._id %>?_method=DELETE" method="POST">
         <button type="submit">DELETE RECIPE</button></form> 
-      <a href="/recipes/<%= recipe.id %>/edit">EDIT RECIPE</a>
     </div>
   <% }; %> 
-
+  
 </section>
 
 
