--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,31 +49,52 @@ a {
 }
 
 .card {
-  display: flex;
-  flex-direction: column;
-  margin: 16px;
   width: 300px;
-  height: 250px;
+  height: 300px;
 }
 
-img {
+.img-card {
+  width: 300px;
+  height: 300px;
+}
+
+.img-link {
+  width: 300px;
+  height: 300px;
+  margin: 20px;
+}
+
+.img-fluid {
   margin: 50px;
-  max-height: 100%;
-  width: auto;
-  height: auto;
+  width: 75vw;
+  height: 75vh;
 }
 
 .one-recipe-container {
   text-align: center
 }
 
-/* .comments-container {
+.comments-container {
+  text-align: center;
+  margin: 80px 0;
+}
+
+#comments-table {
+  margin: 0 auto;
+  width: 25%;
   text-align: center
-} */
+}
+
+.edit-recipe-btn {
+  text-decoration: none;
+}
 
 .bottom-btns {
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 10px;
+  /* height: 100px;
+  width: 300px; */
 }
+
