--- a/views/recipes/new.ejs
+++ b/views/recipes/new.ejs
@@ -12,7 +12,7 @@
         <div class="row mb-3">
           <label for="inputRecipeIMG" class="col-sm-2 col-form-label">Image</label>
           <div class="col-sm-10">
-            <input type="text" name="imgURL" class="form-control" id="inputRecipeIMG">
+            <input type="text" name="imgURL" class="form-control" id="inputRecipeIMG" placeholder="Insert Image Link Here...">
           </div>
         </div>
         <div class="row mb-3">
