pending categories.ejs bug

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
         <% r.categories.forEach(function(category) { %>
           <div class="card">
             <div class="card-body">
-              <a href="/categories/<%= category %>"><%= category %></a>
+              <a href="/recipes/categories/<%= category %>"><%= category %></a>
             </div>
           </div>
         <% }) %>
