--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,7 @@ a {
 }
 
 .about-container {
-  margin: 75px;
+  margin: 70px;
 }
 
 #about-welcome {
@@ -45,7 +45,7 @@ a {
   display: flex;
   flex-wrap: wrap;
   width: 1000px;
-  height: 850px;
+  height: auto;
 }
 
 .card {
@@ -61,7 +61,21 @@ a {
 .img-link {
   width: 300px;
   height: 300px;
-  margin: 20px;
+  margin: 15px;
+}
+
+.categories-container {
+  display: flex;
+  justify-content: center;
+  margin: 50px;
+}
+
+#second-card {
+  height: 50px;
+  width: 200px;
+  margin: 12px;
+  text-align: center;
+  text-decoration: none;
 }
 
 .img-fluid {
