--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -9,6 +9,6 @@
     <% }) %>     
   </div>
 
-<a href="/recipes/new">ADD NEW</a>
+<a href="/recipes/new" class="new-recipe-link">ADD NEW</a>
 
 <%- include('../partials/footer') %>
