--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -24,9 +24,8 @@
         </tr>
       </thead>
       <tbody>
-        <% console.log(recipe.comments.length) %> 
-        <% recipe.comments.forEach(function(c) { %>
-          <% if (recipe.comments.length > 0) { %>  
+        <% if (recipe.comments.length) { %>  
+          <% recipe.comments.forEach(function(c) { %>
             <% let total=0 %>
               <% total +=c.rating %>
                 <tr> 
@@ -35,36 +34,36 @@
                   <td><%= c.text %></td>
                   <td><%= c.rating %></td>
                 </tr>
-          <% } else { %>
-            <h5>No Comments Yet</h5>
-          <% } %>
-            </tbody>
-          </table>
-
-      <% if (user) { %>
-        <div>
-          <form class="edit-comment-form" action="/recipes/comments/<%= c._id %>?_method=PUT" method="POST">
-            <input type="content" name="text" value="<%= c.text %>">
-            <label>Rating:</label>
-            <select name="rating">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-            </select>
-            <button id="button">Save Comment</button>
-          </form>
+      </tbody>
+    </table>
+            
+            <% if (user) { %>
+              <div>
+                <form class="edit-comment-form" action="/recipes/comments/<%= c._id %>?_method=PUT" method="POST">
+                  <input type="content" name="text" value="<%= c.text %>">
+                  <label>Rating:</label>
+                <select name="rating">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                </select>
+                <button id="button">Save Comment</button>
+                </form>
           
-          <button class="show-button">Edit Comment</button>
+                <button class="show-button">Edit Comment</button>
 
-          <form action="/comments/<%= c._id %>?_method=DELETE" method="POST">
-            <button type="submit">X</button>
-          </form> 
-        </div>
-      <% } %>
-    <% }); %>
-  
+                <form action="/comments/<%= c._id %>?_method=DELETE" method="POST">
+                <button type="submit">X</button>
+                </form> 
+              </div>
+        <% } %>
+        <% }); %>
+        <% } else { %>
+        <h5>No Comments Yet</h5>
+        <% } %>
+        
     <script>
       const $form = $('.edit-comment-form');
       const $commentsContainer = $('.comments-container');
