working on categories feature

--- a/views/recipes/show.ejs
+++ b/views/recipes/show.ejs
@@ -9,7 +9,7 @@
       <h3>Directions:</h3>
       <p><%= recipe.directions %></p>
       <h3>Categories:</h3>
-      <p><%= recipe.categories %></p> 
+      <p><%= recipe.categories.category %></p> 
   </div>
 
   <div class="comments-container">
